# sleeper

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CTestCustom.cmake  CppCheckSuppressions.txt  LICENSE  README.md  snippets.cmake
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  sleeper.cpp
src/include/sleeper/: sleeper.hpp
test/: CMakeLists.txt  sleepertests.cpp
